# l10n-glossary

./: CHANGELOG.md  README.md  l10n-glossary_0.2.1_all.deb  po4a.cfg  pyproject.toml  pyproject.toml.bak
.github/workflows/: build-rpm.yml  release.yml
.tx/: config
build-new/: l10n-glossary_0.2.1_all.deb
build-new/l10n-glossary_0.2.1_all/DEBIAN/: control
build-new/l10n-glossary_0.2.1_all/usr/lib/python3/dist-packages/l10n_glossary/: io_handler.py  main.py
build-new/l10n-glossary_0.2.2_all/DEBIAN/: control
build-new/l10n-glossary_0.2.2_all/usr/lib/python3/dist-packages/l10n_glossary/: consistency.py  glossary.py
build-new/l10n-glossary_0.2.2_all/usr/share/applications/: se.danielnylander.l10n-glossary.desktop
data/: se.danielnylander.l10n-glossary.desktop  se.danielnylander.l10n-glossary.desktop.in
data/man/: l10n-glossary.1
po/: README.md  l10n-glossary.pot  sv.mo  sv.po
po/man/: l10n-glossary.1.pot  sv.po
po/sv/LC_MESSAGES/: l10n-glossary.mo
src/l10n_glossary/: __init__.py  __init__.py.bak  main.py
